Bug 817043 - mozaudiochanneltype attribute, r=sicking a=blocking-basecamp