content/html/content/public/nsHTMLMediaElement.h
@@ -605,6 +605,9 @@ protected:
     return isPaused;
   }
 
+  // Check the permissions for audiochannel.
+  bool CheckAudioChannelPermissions(const nsAString& aType);
+
   // The current decoder. Load() has been called on this decoder.
   // At most one of mDecoder and mSrcStream can be non-null.
   nsRefPtr<MediaDecoder> mDecoder;
